# visits

./: Cargo.toml  LICENSE  README.md
migrations/2019-03-16-211806_create_visits/: down.sql  up.sql
src/: app.rs  cli.rs  main.rs  models.rs  pg.rs  schema.rs  session.rs
src/models/: mod.rs  user.rs  visit.rs
