[package]
name = "visits"
version = "0.1.0"
authors = ["Liam Griffiths <liamgriffiths@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
diesel = { version = "1.0.0-rc1", features = ["postgres", "chrono", "serde_json","r2d2"] }
dotenv = "0.9.0"
chrono = { version = "0.4.0", features = ["serde"] }
url = "1.2.1"
failure = "0.1.5"
exitfailure = "0.5.1"
time = "0.1"
prettytable-rs = "^0.8"
